<resources>
    <string name="app_name">COMP3717 Final</string>
    <string name="title">Final Exam 202130</string>
    <string name="nav_open_drawer">Open Navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="student_id">A01173804</string>
    <string name="student_name">Hang Liu</string>

    <!-- GitHub fragment -->
    <string name="git_hub">Git Hub</string>

    <!-- Movie fragment labels -->
    <string name="fav_movie">Favorite Movie</string>
    <string name="movie_name_label">Name:\u0020</string>
    <string name="movie_year_label">Year:\u0020</string>
    <string name="movie_story_label">Story:\u0020</string>
    <string name="movie_director_label">Director:\u0020</string>
    <string name="movie_actors_label">Actors:\u0020</string>

    <!-- Movie fragment text -->
    <string name="movie_name_text">The Sound of Music</string>
    <string name="movie_year_text">1965</string>
    <string name="movie_story_text">
        Maria is a free-spirited young Austrian woman studying to become a nun at Nonnberg Abbey in Salzburg in 1938. Her youthful enthusiasm and lack of discipline cause some concern. The Mother Abbess sends Maria to the villa of retired naval officer Captain Georg von Trapp to be governess to his seven children—Liesl, Friedrich, Louisa, Kurt, Brigitta, Marta, and Gretl. The Captain has been raising his children alone using strict military discipline following the death of his wife. Although the children misbehave at first, Maria responds with kindness and patience, and soon the children come to trust and respect her.
    </string>
    <string name="movie_director_text">Robert Wise</string>
    <string name="movie_actors_text">Julie Andrews, Christopher Plummer, Eleanor Parker</string>

    <!-- Dino fragment -->
    <string name="dino">Dino</string>
</resources>