<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav_movie"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/sound_of_music"  />

        <View
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_name_label"
                android:textStyle="bold"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_name_text"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_year_label"
                android:gravity="center"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_year_text"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_story_label"
                android:gravity="top|left"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_story_text"
                android:gravity="top|left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_director_label"
                android:gravity="top|left"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_director_text"
                android:gravity="top|left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_actors_label"
                android:gravity="top|left"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movie_actors_text"
                android:gravity="top|left"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height= "2dp"
            android:background="@color/black" />

    </LinearLayout>
</ScrollView>